; ModuleID = '/home/carl/AnghaBench/freebsd/sys/geom/extr_geom_event.c_g_run_events.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/geom/extr_geom_event.c_g_run_events.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_eventlock = common dso_local global i32 0, align 4
@MA_OWNED = common dso_local global i32 0, align 4
@g_wither_work = common dso_local global i64 0, align 8
@g_wait_event = common dso_local global i32 0, align 4
@PRIBIO = common dso_local global i32 0, align 4
@PDROP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"-\00", align 1
@g_doorstep = common dso_local global i32 0, align 4
@hz = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @g_run_events() #0 {
  br label %1

1:                                                ; preds = %30, %0
  %2 = call i32 (...) @g_topology_lock()
  br label %3

3:                                                ; preds = %6, %1
  %4 = call i64 (...) @one_event()
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %3
  br label %3

7:                                                ; preds = %3
  %8 = load i32, i32* @MA_OWNED, align 4
  %9 = call i32 @mtx_assert(i32* @g_eventlock, i32 %8)
  %10 = load i64, i64* @g_wither_work, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %7
  store i64 0, i64* @g_wither_work, align 8
  %13 = call i32 @mtx_unlock(i32* @g_eventlock)
  %14 = call i32 (...) @g_wither_washer()
  %15 = call i32 (...) @g_topology_unlock()
  br label %30

16:                                               ; preds = %7
  %17 = call i32 (...) @g_topology_unlock()
  %18 = load i32, i32* @PRIBIO, align 4
  %19 = load i32, i32* @PDROP, align 4
  %20 = or i32 %18, %19
  %21 = call i64 @TAILQ_EMPTY(i32* @g_doorstep)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %16
  br label %27

24:                                               ; preds = %16
  %25 = load i32, i32* @hz, align 4
  %26 = sdiv i32 %25, 10
  br label %27

27:                                               ; preds = %24, %23
  %28 = phi i32 [ 0, %23 ], [ %26, %24 ]
  %29 = call i32 @msleep(i32* @g_wait_event, i32* @g_eventlock, i32 %20, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %28)
  br label %30

30:                                               ; preds = %27, %12
  br label %1
}

declare dso_local i32 @g_topology_lock(...) #1

declare dso_local i64 @one_event(...) #1

declare dso_local i32 @mtx_assert(i32*, i32) #1

declare dso_local i32 @mtx_unlock(i32*) #1

declare dso_local i32 @g_wither_washer(...) #1

declare dso_local i32 @g_topology_unlock(...) #1

declare dso_local i32 @msleep(i32*, i32*, i32, i8*, i32) #1

declare dso_local i64 @TAILQ_EMPTY(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
